--- a/Timesheets/Views/Timesheets/Create.cshtml
+++ b/Timesheets/Views/Timesheets/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimesheetDTO
+﻿@model TimesheetEntryDTO
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
