--- a/Timesheets/Views/TimesheetEntries/Index.cshtml
+++ b/Timesheets/Views/TimesheetEntries/Index.cshtml
@@ -37,7 +37,7 @@
                 @Html.DisplayFor(modelItem => item.HoursWorked)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.User.Id)
+                @Html.DisplayFor(modelItem => item.User.FirstName)  @Html.DisplayFor(modelItem => item.User.LastName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Project.ProjectId)
