TimesheetEntry Crud ready except projectname(edit,create)

--- a/Timesheets/Views/TimesheetEntries/Delete.cshtml
+++ b/Timesheets/Views/TimesheetEntries/Delete.cshtml
@@ -26,14 +26,14 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.User)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.Id)
-        </dd class>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.User.FirstName) @Html.DisplayFor(model => model.User.LastName)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Project)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Project.ProjectId)
+            @Html.DisplayFor(model => model.Project.Name)
         </dd class>
     </dl>
     
