--- a/Timesheets/Views/TimesheetEntries/Details.cshtml
+++ b/Timesheets/Views/TimesheetEntries/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Timesheets.Models.TimesheetEntry
+﻿    @model Timesheets.Models.TimesheetEntry
 
 @{
     ViewData["Title"] = "Details";
@@ -25,14 +25,14 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.User)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.Id)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.User.FirstName) @Html.DisplayFor(model => model.User.LastName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Project)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Project.ProjectId)
+            @Html.DisplayFor(model => model.Project.Name)
         </dd>
     </dl>
 </div>
