--- a/Timesheets/Views/TimesheetEntries/Edit.cshtml
+++ b/Timesheets/Views/TimesheetEntries/Edit.cshtml
@@ -24,13 +24,13 @@
                 <span asp-validation-for="HoursWorked" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
+                <label asp-for="User" class="control-label"></label>
+                <select asp-for="UserId" asp-items="ViewBag.ApplicationUsers" class="form-control" required></select>
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProjectId" class="control-label"></label>
-                <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
+                <label asp-for="Project" class="control-label"></label>
+                <select asp-for="ProjectId" asp-items="ViewBag.Projects" class="form-control" required></select>
                 <span asp-validation-for="ProjectId" class="text-danger"></span>
             </div>
             <div class="form-group">
