--- a/Timesheets/Views/Projects/Create.cshtml
+++ b/Timesheets/Views/Projects/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Create";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Create</h1>
@@ -14,12 +15,13 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control" required/>
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="OwnerDepartmentId" class="control-label"></label>
-                <select asp-for="OwnerDepartmentId" class ="form-control" asp-items="ViewBag.OwnerDepartmentId"></select>
+                <label asp-for="OwnerDepartment" class="control-label"></label>
+                <select asp-for="OwnerDepartmentId" class="form-control" asp-items="ViewBag.Departments"></select>
+                <span asp-validation-for="OwnerDepartmentId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
