--- a/Timesheets/Views/Projects/Details.cshtml
+++ b/Timesheets/Views/Projects/Details.cshtml
@@ -1,7 +1,8 @@
-﻿@model Timesheets.Models.Project
+﻿@model ProjectDetailsViewModel
 
 @{
     ViewData["Title"] = "Details";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Details</h1>
@@ -10,21 +11,27 @@
     <h4>Project</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+        <dt class="col-sm-3">
+            @Html.DisplayNameFor(model => model.Project.Name)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+        <dd class="col-sm-9">
+            @Html.DisplayFor(model => model.Project.Name)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OwnerDepartment)
+        <dt class="col-sm-3">
+            @Html.DisplayNameFor(model => model.Project.OwnerDepartment)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OwnerDepartment.DepartmentId)
+        <dd class="col-sm-9">
+            @Html.DisplayFor(model => model.Project.OwnerDepartment.Name)
+        </dd>
+        <dt class="col-sm-3">
+            @Html.DisplayNameFor(model => model.Project.RelatedDepartments)
+        </dt>
+        <dd class="col-sm-9">
+            @(string.Join(", ", Model.RelatedDepartments.Select(d => d.Name)));
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ProjectId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Project.ProjectId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
