--- a/Timesheets/Views/Projects/Edit.cshtml
+++ b/Timesheets/Views/Projects/Edit.cshtml
@@ -19,8 +19,8 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="OwnerDepartmentId" class="control-label"></label>
-                <select asp-for="OwnerDepartmentId" class="form-control" asp-items="ViewBag.OwnerDepartmentId"></select>
+                <label asp-for="OwnerDepartment" class="control-label"></label>
+                <select asp-for="OwnerDepartmentId" class="form-control" asp-items="ViewBag.Departments"></select>
                 <span asp-validation-for="OwnerDepartmentId" class="text-danger"></span>
             </div>
             <div class="form-group">
