--- a/Timesheets/Views/Projects/Index.cshtml
+++ b/Timesheets/Views/Projects/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@model IEnumerable<Timesheets.Models.Project>
+﻿@model ProjectViewModel
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Index</h1>
@@ -13,29 +14,30 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.OwnerDepartment)
+                Owner Department
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OwnerDepartment.DepartmentId)
-            </td>
-            <td>
-                <a class="fa fa-pencil action_buttons" asp-action="Edit" asp-route-id="@item.ProjectId" aria-hidden="true"></a> 
-                <a asp-action="Details" asp-route-id="@item.ProjectId">Details</a>
-                <a asp-action="Delete" asp-route-id="@item.ProjectId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.Projects)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OwnerDepartment.Name)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ProjectId">Edit</a>
+                    <a asp-action="Details" asp-route-id="@item.ProjectId">Details</a>
+                    <a asp-action="Delete" asp-route-id="@item.ProjectId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
