TimesheetEntry Crud ready with validation check

--- a/Timesheets/Views/TimesheetEntries/Create.cshtml
+++ b/Timesheets/Views/TimesheetEntries/Create.cshtml
@@ -21,6 +21,8 @@
                 <label asp-for="HoursWorked" class="control-label"></label>
                 <input asp-for="HoursWorked" class="form-control" />
                 <span asp-validation-for="HoursWorked" class="text-danger"></span>
+                <small class="form-text text-muted">HoursWorked must be greater than 0</small>
+
             </div> 
             <div class="form-group">
                 <label asp-for="User" class="control-label"></label>
