--- a/Timesheets/Views/TimesheetEntries/Edit.cshtml
+++ b/Timesheets/Views/TimesheetEntries/Edit.cshtml
@@ -13,26 +13,27 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="TimesheetEntryId" />
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="DateCreated" class="control-label"></label>
-                <input asp-for="DateCreated" class="form-control" />
+                <input  asp-for="DateCreated" class="form-control" />
                 <span asp-validation-for="DateCreated" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="HoursWorked" class="control-label"></label>
-                <input asp-for="HoursWorked" class="form-control" />
-                <span asp-validation-for="HoursWorked" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            </div>*@
+        <div class="form-group">
+            <label asp-for="HoursWorked" class="control-label"></label>
+            <input asp-for="HoursWorked" class="form-control" />
+            <span asp-validation-for="HoursWorked" class="text-danger"></span>
+            <span class="form-text text-muted">HoursWorked must be greater than 0</span>
+        </div>
+            @*<div class="form-group">
                 <label asp-for="User" class="control-label"></label>
                 <select asp-for="UserId" asp-items="ViewBag.ApplicationUsers" class="form-control" required></select>
                 <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            </div>*@
+            @*<div class="form-group">
                 <label asp-for="Project" class="control-label"></label>
                 <select asp-for="ProjectId" asp-items="ViewBag.Projects" class="form-control" required></select>
                 <span asp-validation-for="ProjectId" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
