--- a/Timesheets/Views/ApplicationUsers/Delete.cshtml
+++ b/Timesheets/Views/ApplicationUsers/Delete.cshtml
@@ -1,30 +1,30 @@
-﻿@model Timesheets.Areas.Identity.Data.ApplicationUser
+﻿@model ApplicationUsersDetailsViewModel
 @{
     ViewData["Title"] = "Delete";
 }
 
 <h1>Delete</h1>
-<h3>Delete User?</h3>
+
 <div>
     <h4>User</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FullName)
+            @Html.DisplayNameFor(model => model.ApplicationUser.FirstName)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FullName)
+        <dd class="col-sm-2">
+            @Html.DisplayFor(model => model.ApplicationUser.LastName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Manager)
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-2">
             @Html.DisplayFor(model => model.Manager.ManagerId)
         </dd>
     </dl>
 
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="ApplicationUser.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
