--- a/Timesheets/Views/ApplicationUsers/Details.cshtml
+++ b/Timesheets/Views/ApplicationUsers/Details.cshtml
@@ -1,6 +1,7 @@
-﻿@model Timesheets.Areas.Identity.Data.ApplicationUser
+﻿@model ApplicationUsersDetailsViewModel
 @{
     ViewData["Title"] = "Details";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Details</h1>
@@ -9,20 +10,20 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FullName)
+            @Html.DisplayNameFor(model => model.ApplicationUser.FirstName)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FullName)
+        <dd class="col-sm-2">
+            @Html.DisplayFor(model => model.ApplicationUser.LastName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Manager)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Manager.ManagerId)
+        <dd class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Manager.ManagerId)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="Id">Edit</a>
+    <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 </div>
