--- a/Timesheets/Views/ApplicationUsers/Index.cshtml
+++ b/Timesheets/Views/ApplicationUsers/Index.cshtml
@@ -1,6 +1,7 @@
-﻿@model IEnumerable<Timesheets.Areas.Identity.Data.ApplicationUser>
+﻿@model ApplicationUsersViewModel
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Index</h1>
@@ -11,30 +12,36 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.FullName)
+                First Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Manager)
+                Last Name
+            </th>
+            <th>
+                Id
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @foreach (var item in Model.ApplicationUsers)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FullName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Manager.ManagerId)
-                </td>
-                <td>
-                    <a class="fa fa-pencil action_buttons" asp-action="Edit" asp-route-id="@item.Id" aria-hidden="true"></a>
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
+            <td>
+                <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
         }
     </tbody>
 </table>
