--- a/Timesheets/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Timesheets/Areas/Identity/Pages/Account/Register.cshtml
@@ -56,7 +56,7 @@
                                                         </div>
                                                         <div class="form-group">
                                                             <select asp-for="Input.DepartmentId" asp-items="Model.DepartmentIds" class="form-control" >
-                                                                <option value="">---Select Department---</option>
+                                                                <option value="">Select Department</option>
                                                             </select>
                                                             <span asp-validation-for="Input.DepartmentId" class="text-danger"></span>
                                                         </div>
