--- a/Timesheets/Views/Departments/Create.cshtml
+++ b/Timesheets/Views/Departments/Create.cshtml
@@ -5,33 +5,61 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+                <div class="col-sm-6">
+                    <h1>Create</h1>
+                </div>
+                <div class="col-sm-6">
+                    <ol class="breadcrumb float-sm-right">
+                        <li class="breadcrumb-item"><a asp-action="Index">Home</a></li>
+                        <li class="breadcrumb-item active">Create Department</li>
+                    </ol>
+                </div>
+            </div>
+        </div><!-- /.container-fluid -->
+    </section>
 
-<h4>Department</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" required />
-                <span asp-validation-for="Name" class="text-danger"></span>
+    <section class="content">
+        <div class="container-fluid">
+            <div class="row">
+                <!-- left column -->
+                <div class="col-12">
+                    <!-- general form elements -->
+                    <div class="card card-primary">
+                        <div class="card-header">
+                            <h3 class="card-title">Create Department</h3>
+                        </div>
+                        <!-- /.card-header -->
+                        <form asp-action="Create">
+                            <div class="card-body">
+                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                <div class="form-group">
+                                    <label asp-for="Name" class="control-label"></label>
+                                    <input asp-for="Name" class="form-control" required />
+                                    <span asp-validation-for="Name" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="DepartmentHead" class="control-label"></label>
+                                    <select asp-for="DepartmentHeadId" asp-items="ViewBag.ApplicationUsers" class="form-control" required>
+                                        <option value="">Select DepartmentHead</option>
+                                    </select>
+                                    <span asp-validation-for="DepartmentHeadId" class="text-danger"></span>
+                                    <small class="form-text text-muted">A user can only manage one department</small>
+                                </div>
+                                <div class="form-group">
+                                    <input type="submit" value="Create" class="btn btn-primary" />
+                                    <a class="btn btn-secondary" asp-action="Index">Back to Departments</a>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <!-- /.card -->
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="DepartmentHead" class="control-label"></label>
-                <select asp-for="DepartmentHeadId" asp-items="ViewBag.ApplicationUsers" class="form-control" required></select>
-                <span asp-validation-for="DepartmentHeadId" class="text-danger"></span>
-                <small class="form-text text-muted">A user can only manage one department</small>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+        </div>
+    </section>
 </div>
-
-<div>
-    <a class="btn btn-secondary" asp-action="Index">Back to Departments</a>
-</div>
-
