--- a/Timesheets/Views/Projects/Index.cshtml
+++ b/Timesheets/Views/Projects/Index.cshtml
@@ -25,16 +25,22 @@
                     <div class="card-header">
                         <h3 class="card-title">Projects</h3>
                     </div>
+                    <form asp-action="Index" method="get">
+                        <p>
+                            Filter Projects: <input type="text" name="searchString" value="@ViewBag.SearchString">
+                            <input type="submit" value="Filter" />
+                        </p>
+                    </form>
                     <!-- /.card-header -->
                     <div class="card-body p-0">
                         <table class="table table-striped">
                             <thead>
                                 <tr>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.Name) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.NameSortParm }, new { @class = "fas fa-sort" })
+                                        @Html.DisplayNameFor(model => model.Name) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.NameSortParm, searchString = ViewBag.SearchString }, new { @class = "fas fa-sort" })
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.OwnerDepartment) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.OwnerDepartmentSortParm }, new { @class = "fas fa-sort" })
+                                        @Html.DisplayNameFor(model => model.OwnerDepartment) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.OwnerDepartmentSortParm, searchString = ViewBag.SearchString }, new { @class = "fas fa-sort" })
                                     </th>
                                     <th></th>
                                 </tr>
