--- a/Timesheets/Views/TimesheetEntries/Index.cshtml
+++ b/Timesheets/Views/TimesheetEntries/Index.cshtml
@@ -23,22 +23,28 @@
                         <div class="card-header">
                             <h3 class="card-title">Timesheet Entries</h3>
                         </div>
+                        <form asp-action="Index" method="get">
+                            <p>
+                                Filter Projects: <input type="text" name="searchString" value="@ViewBag.SearchString">
+                                <input type="submit" value="Filter" />
+                            </p>
+                        </form>
                         <!-- /.card-header -->
                         <div class="card-body p-0">
                             <table class="table table-striped">
                                 <thead>
                                     <tr>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.DateCreated) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.DateSortParm }, new { @class = "fas fa-sort" })
+                                            @Html.DisplayNameFor(model => model.DateCreated) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.DateSortParm, searchString = ViewBag.SearchString }, new { @class = "fas fa-sort" })
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.HoursWorked) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.HoursWorkedSortParm }, new { @class = "fas fa-sort" })
+                                            @Html.DisplayNameFor(model => model.HoursWorked) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.HoursWorkedSortParm, searchString = ViewBag.SearchString }, new { @class = "fas fa-sort" })
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.User) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.UserNameSortParm }, new { @class = "fas fa-sort" })
+                                            @Html.DisplayNameFor(model => model.User) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.UserNameSortParm, searchString = ViewBag.SearchString }, new { @class = "fas fa-sort" })
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Project) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.ProjectSortParm }, new { @class = "fas fa-sort" })
+                                            @Html.DisplayNameFor(model => model.Project) @Html.ActionLink("", "Index", new { sortOrder = ViewBag.ProjectSortParm, searchString = ViewBag.SearchString }, new { @class = "fas fa-sort" })
                                         </th>
                                         <th></th>
                                     </tr>
