Redesign of Users, fixed typo in AppilcationController name and changed the url of the ApplicationUsers to Users

--- a/Timesheets/Views/Administration/ListRoles.cshtml
+++ b/Timesheets/Views/Administration/ListRoles.cshtml
@@ -49,6 +49,8 @@
                                     <div class="card-footer">
                                         <a class="btn btn-primary" asp-action="EditRole"
                                            asp-controller="Administration" asp-route-id="@role.Id">Edit</a>
+                                        <a class="btn btn-primary" asp-action="EditUsersInRole"
+                                           asp-controller="Administration" asp-route-id="@role.Id">Edit2</a>
                                         <a href="#" class="btn btn-danger">Delete</a>
                                     </div>
                                 </div>
