Fixed design of filters of Timesheets, Departments, Projects and email in Users.

--- a/Timesheets/Views/Users/Index.cshtml
+++ b/Timesheets/Views/Users/Index.cshtml
@@ -49,7 +49,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col text-center">
-                                            <button class="btn btn-dark"><div class="fa fa-at"></div> @Html.DisplayFor(modelItem => item.Email)</button>
+                                            <span class="btn btn-dark"><div class="fa fa-at"></div> @Html.DisplayFor(modelItem => item.Email)</span>
                                         </div>
                                     </div>
                                 </div>
