--- a/Timesheets/Views/TimesheetEntries/Index.cshtml
+++ b/Timesheets/Views/TimesheetEntries/Index.cshtml
@@ -17,18 +17,28 @@
         </section>
 
         <section class="content">
+            <div class="row form-group">
+                <div class="col-xl-10 offset-xl-1">
+                    <div class="card-tools">
+                        <form asp-action="Index" method="get">
+                            <div class="input-group input-group-sm" style="width: 150px;">
+
+                                <input type="text" name="searchString" value="@ViewBag.SearchString" placeholder="Filter Entries" class="form-control float-right">
+                                <div class="input-group-append">
+                                    <button type="submit" class="btn btn-default"><i class="fas fa-search"></i></button>
+                                </div>
+
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
                     <div class="card">
                         <div class="card-header">
                             <h3 class="card-title">Timesheet Entries</h3>
                         </div>
-                        <form asp-action="Index" method="get">
-                            <p>
-                                Filter Projects: <input type="text" name="searchString" value="@ViewBag.SearchString">
-                                <input type="submit" value="Filter" />
-                            </p>
-                        </form>
                         <!-- /.card-header -->
                         <div class="card-body p-0">
                             <table class="table table-striped">
