fix nodelete view

--- a/Timesheets/Views/Projects/NoDelete.cshtml
+++ b/Timesheets/Views/Projects/NoDelete.cshtml
@@ -8,6 +8,7 @@
         <br>
 
         <a asp-action="Index">Back to Department List</a>
-        <meta http-equiv="refresh" content="5"/>
+        <meta http-equiv="refresh" content="3;url=../Index">
+        
     </div>
 
