--- a/Timesheets/Views/Users/Index.cshtml
+++ b/Timesheets/Views/Users/Index.cshtml
@@ -9,7 +9,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 form-group">
-                        <a class="btn btn-primary" href="../../Identity/Account/Register">
+                        <a class="btn btn-primary" asp-area="Identity" asp-page="/Account/Register">
                             <div class="fa fa-user-plus fa-2x"></div> Add
                         </a>
                     </div>
