--- a/Timesheets/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Timesheets/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -5,25 +5,30 @@
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
-<h4>@ViewData["Title"]</h4>
-<partial name="_StatusMessage" model="Model.StatusMessage" />
-<div class="row">
-    <div class="col-md-6">
-        <form id="profile-form" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Username"></label>
-                <input asp-for="Username" class="form-control" disabled />
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.PhoneNumber"></label>
-                <input asp-for="Input.PhoneNumber" class="form-control" />
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-            </div>
-            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
-        </form>
-    </div>
-</div>
+
+                    <div class="card card-primary">
+
+                        <div class="card-header">
+                            <h3 class="card-title">@ViewData["Title"]</h3>
+                        </div>
+                        <div class="card-body">
+                            <partial name="_StatusMessage" model="Model.StatusMessage" />
+                            <form id="profile-form" method="post">
+                                <div asp-validation-summary="All" class="text-danger"></div>
+                                <div class="form-group">
+                                    <label asp-for="Username"></label>
+                                    <input asp-for="Username" class="form-control" disabled />
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Input.PhoneNumber"></label>
+                                    <input asp-for="Input.PhoneNumber" class="form-control" />
+                                    <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                                </div>
+                                <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
+                            </form>
+                        </div>
+                    </div>
+                  
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
