Fixed Users Index and added new brand logo

--- a/Timesheets/Views/Shared/_Layout.cshtml
+++ b/Timesheets/Views/Shared/_Layout.cshtml
@@ -57,10 +57,10 @@
          <aside class="main-sidebar sidebar-dark-primary elevation-4">
              <!-- Brand Logo -->
              <a asp-area="" asp-controller="Home" asp-action="Index">
-                 <img src="~/theme/dist/img/netherlands.png"
+                 <img src="~/theme/dist/img/netherlands2.png"
                       alt="Netherlands"
-                      class="brand-image"
-                      style="opacity: .8; height: 30px; margin-top: 10px; margin-left: 27px;">
+                      class="brand-image img-fluid img-circle"
+                      style="opacity: .8; width: 50%; margin-top: 10px; margin-left: 25%;">
              </a>
 
              <!-- Sidebar -->
